# StackVM

./: CMakeLists.txt  StackVM_Fibonacci.cpp  StackVM_Sum.cpp
inc/: CMakeLists.txt  StackVM.cc  StackVM.hpp
